--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import url("./photographer.css");
+/* Define color variables */
+/* Define size variables */
 
 body {
     font-family: "DM Sans", sans-serif;
@@ -49,8 +50,7 @@ h1 {
     width: 200px;
 }
 
-/* Photographer */
-
+/* Modal */
 #contact_modal {
     display: none;
 }
