Add homepage sass + mixins + variables

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
 /* Define color variables */
 /* Responsive variables */
 /* Logo variables */
+/* Grid variables */
 /***** MOBILE *****/
 /* From 280px */
 /* From 320px */
@@ -456,6 +457,46 @@ li {
   .logo {
     height: 1.8rem;
   }
+}
+
+.photographer-section {
+  margin: 6.25rem 4.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5rem 10rem;
+}
+@media screen and (max-width: 1160px) {
+  .photographer-section {
+    margin: 6.25rem 4.5rem;
+    gap: 7rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  .photographer-section {
+    margin: 3rem 4.375rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem 4rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .photographer-section {
+    margin: 3rem 3rem;
+    gap: 4.375rem 3rem;
+  }
+}
+@media screen and (max-width: 529px) {
+  .photographer-section {
+    margin: 3rem 1.8rem;
+    grid-template-columns: 1fr;
+  }
+}
+.photographer-section a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 0.3125rem;
 }
 
 /*# sourceMappingURL=main.css.map */
