--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,8 @@
 @import './components/lightBox';
 @import './components/modal';
 
-@import './layouts/layouts';
+@import './layouts/homePage-layout';
+@import './layouts/photographerPage-layout';
 
 @import './pages/homePage';
 @import './pages/photographerPage';
