--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,18 +1,603 @@
-/* Error: expected "{".
- *    ,
- * 47 |         margin-right: 4.5rem;
- *    |                             ^
- *    '
- *   sass\layouts\_homepage-layout.scss 47:29  @import
- *   sass\main.scss 20:9                       root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a    \2577 \a 47 \2502          margin-right: 4.5rem;\d\a    \2502                              ^\a    \2575 \a   sass\\layouts\\_homepage-layout.scss 47:29  @import\a   sass\\main.scss 20:9                       root stylesheet';
+/* Breakpoints variables */
+/* Font sizes */
+/* Line height variables */
+/* Define color variables */
+/* Responsive variables */
+/* Logo variables */
+/* Grid variables */
+/***** MOBILE *****/
+/* From 280px */
+/* From 320px */
+/* From 400px */
+/* From 480px */
+/* From 529px */
+/* From 599px */
+/* From 699px */
+/* From 872px */
+/***** TABLETTE *****/
+/* Height from 599px */
+/* Height from 939px */
+/* From 992px */
+/***** DESKTOP *****/
+/* From 1160px */
+/* From 1369px */
+/* From 1440px */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+  ========================================================================== */
+/**
+* 1. Correct the line height in all browsers.
+* 2. Prevent adjustments of font size after orientation changes in iOS.
+*/
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
 }
+
+/* Sections
+    ========================================================================== */
+/**
+  * Remove the margin in all browsers.
+  */
+body {
+  margin: 0;
+}
+
+/**
+  * Render the `main` element consistently in IE.
+  */
+main {
+  display: block;
+}
+
+/**
+  * Correct the font size and margin on `h1` elements within `section` and
+  * `article` contexts in Chrome, Firefox, and Safari.
+  */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+    ========================================================================== */
+/**
+  * 1. Add the correct box sizing in Firefox.
+  * 2. Show the overflow in Edge and IE.
+  */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+}
+
+/**
+  * 1. Correct the inheritance and scaling of font size in all browsers.
+  * 2. Correct the odd `em` font sizing in all browsers.
+  */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+    ========================================================================== */
+/**
+  * Remove the gray background on active links in IE 10.
+  */
+a {
+  background-color: transparent;
+}
+
+/**
+  * 1. Remove the bottom border in Chrome 57-
+  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+  */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+  /* 2 */
+}
+
+/**
+  * Add the correct font weight in Chrome, Edge, and Safari.
+  */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+  * 1. Correct the inheritance and scaling of font size in all browsers.
+  * 2. Correct the odd `em` font sizing in all browsers.
+  */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+  * Add the correct font size in all browsers.
+  */
+small {
+  font-size: 80%;
+}
+
+/**
+  * Prevent `sub` and `sup` elements from affecting the line height in
+  * all browsers.
+  */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+    ========================================================================== */
+/**
+  * Remove the border on images inside links in IE 10.
+  */
+img {
+  border-style: none;
+}
+
+/* Forms
+    ========================================================================== */
+/**
+  * 1. Change the font styles in all browsers.
+  * 2. Remove the margin in Firefox and Safari.
+  */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+  * Show the overflow in IE.
+  * 1. Show the overflow in Edge.
+  */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+  * Remove the inheritance of text transform in Edge, Firefox, and IE.
+  * 1. Remove the inheritance of text transform in Firefox.
+  */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+  * Correct the inability to style clickable types in iOS and Safari.
+  */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+  * Remove the inner border and padding in Firefox.
+  */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+  * Restore the focus styles unset by the previous rule.
+  */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+  * Correct the padding in Firefox.
+  */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+  * 1. Correct the text wrapping in Edge and IE.
+  * 2. Correct the color inheritance from `fieldset` elements in IE.
+  * 3. Remove the padding so developers are not caught out when they zero out
+  *    `fieldset` elements in all browsers.
+  */
+legend {
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
+}
+
+/**
+  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+  */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+  * Remove the default vertical scrollbar in IE 10+.
+  */
+textarea {
+  overflow: auto;
+}
+
+/**
+  * 1. Add the correct box sizing in IE 10.
+  * 2. Remove the padding in IE 10.
+  */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+  * Correct the cursor style of increment and decrement buttons in Chrome.
+  */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+  * 1. Correct the odd appearance in Chrome and Safari.
+  * 2. Correct the outline style in Safari.
+  */
+[type=search] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+  * Remove the inner padding in Chrome and Safari on macOS.
+  */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+  * 1. Correct the inability to style clickable types in iOS and Safari.
+  * 2. Change font properties to `inherit` in Safari.
+  */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+    ========================================================================== */
+/*
+  * Add the correct display in Edge, IE 10+, and Firefox.
+  */
+details {
+  display: block;
+}
+
+/*
+  * Add the correct display in all browsers.
+  */
+summary {
+  display: list-item;
+}
+
+/* Misc
+    ========================================================================== */
+/**
+  * Add the correct display in IE 10+.
+  */
+template {
+  display: none;
+}
+
+/**
+  * Add the correct display in IE 10.
+  */
+[hidden] {
+  display: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "DM Sans", sans-serif;
+  font-style: normal;
+  background-color: #FFF;
+}
+
+h1 {
+  margin: 0;
+  font-weight: normal;
+  font-size: 2.25rem;
+  color: #901C1C;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 2.25rem;
+  line-height: 1.5;
+  text-align: center;
+  color: #525252;
+}
+
+p {
+  font-weight: normal;
+  text-align: center;
+  color: #000;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+}
+a:visited {
+  color: #901C1C;
+}
+a:visited h2 {
+  color: #D3573C;
+}
+a:hover h2, a:focus h2 {
+  color: #000;
+}
+
+a,
+button {
+  transition: color 0.3s;
+  transition: background-color 0.3s;
+}
+a:hover, a:focus,
+button:hover,
+button:focus {
+  color: #000;
+}
+a:focus-visible,
+button:focus-visible {
+  outline: thin dotted;
+}
+
+button,
+select {
+  font-weight: bold;
+  color: #FFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover, button:focus,
+select:hover,
+select:focus {
+  background-color: #DB8876;
+}
+
+li {
+  list-style-type: none;
+}
+
+.logo {
+  height: 3.125rem;
+}
+@media screen and (max-width: 992px) {
+  .logo {
+    height: 2.188rem;
+  }
+}
+@media screen and (max-width: 529px) {
+  .logo {
+    height: 2rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .logo {
+    height: 1.8rem;
+  }
+}
+
+/* HOMEPAGE BODY */
+.main-wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+  overflow: visible;
+}
+.main-wrapper--modal-open {
+  overflow: hidden;
+}
+
+/* HEADER */
+.site-header {
+  height: 8rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  /* NAVIGATION */
+}
+@media screen and (max-width: 320px) {
+  .site-header {
+    justify-content: center;
+    align-content: center;
+    gap: 1rem 3rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .site-header--photographerPage {
+    height: 6rem;
+    justify-content: center;
+  }
+}
+.site-header__title {
+  margin-right: 4.5rem;
+}
+@media screen and (max-width: 992px) {
+  .site-header__title {
+    margin-right: 4.375rem;
+    font-size: 1.7rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .site-header__title {
+    margin-right: 3rem;
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .site-header__title {
+    margin-right: 1.8rem;
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .site-header__title {
+    margin-right: 1.5rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .site-header__title {
+    margin: initial;
+  }
+}
+.site-header__nav {
+  margin-left: 4.5rem;
+}
+@media screen and (max-width: 992px) {
+  .site-header__nav {
+    margin-left: 4.375rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .site-header__nav {
+    margin-left: 3rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .site-header__nav {
+    margin-left: 1.8rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .site-header__nav {
+    margin-left: 1.5rem;
+  }
+}
+@media screen and (max-width: 320px) {
+  .site-header__nav {
+    margin: initial;
+  }
+}
+@media screen and (max-width: 599px) {
+  .site-header__nav--photographerPage {
+    margin: initial;
+  }
+}
+
+.photographer-section {
+  margin: 6.25rem 4.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5rem 10rem;
+}
+@media screen and (max-width: 1160px) {
+  .photographer-section {
+    margin: 6.25rem 4.5rem;
+    gap: 7rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  .photographer-section {
+    margin: 3rem 4.375rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem 4rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .photographer-section {
+    margin: 3rem 3rem;
+    gap: 4.375rem 3rem;
+  }
+}
+@media screen and (max-width: 529px) {
+  .photographer-section {
+    margin: 3rem 1.8rem;
+    grid-template-columns: 1fr;
+  }
+}
+.photographer-section a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 0.3125rem;
+}
+
+/*# sourceMappingURL=main.css.map */
