Add js for homepage and fixed errors in sass

--- a/sass/pages/_homePage.scss
+++ b/sass/pages/_homePage.scss
@@ -1,4 +1,4 @@
-.photographer-section {
+.photographer_section {
     margin: 6.25rem 4.5rem;
     display: grid;
     grid-template-columns: $three-column;
