--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -56,6 +56,7 @@ $white: #FFF;
 $black: #000;
 $grey: #525252;
 $lightGrey: #FAFAFA;
+$mediumgrey: #757575;
 
 $primary-color: #901C1C;
 $orange-light: #DB8876;
