--- a/public/css/main.css
+++ b/public/css/main.css
@@ -600,4 +600,79 @@ li {
   border-radius: 0.3125rem;
 }
 
+.profil-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+@media screen and (max-width: 992px) {
+  .profil-card__name {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .profil-card__name {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width: 529px) {
+  .profil-card__name {
+    font-size: 1.5rem;
+  }
+}
+
+.user-picture {
+  width: 12.5rem;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  height: 12.5rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  background-color: #C4C4C4;
+  border-radius: 50%;
+}
+@media screen and (max-width: 992px) {
+  .user-picture {
+    width: 11.75rem;
+    height: 11.75rem;
+  }
+}
+@media screen and (max-width: 599px) {
+  .user-picture {
+    width: 11.55rem;
+    height: 11.55rem;
+  }
+}
+@media screen and (max-width: 529px) {
+  .user-picture {
+    width: 11.75rem;
+    height: 11.75rem;
+  }
+}
+
+.thumbnail {
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (max-width: 320px) {
+  .thumbnail {
+    margin: initial;
+  }
+}
+.thumbnail__location {
+  margin-bottom: 0.1875rem;
+  font-size: 0.8125rem;
+  color: #901C1C;
+}
+.thumbnail__tagline {
+  font-size: 0.625rem;
+  margin-bottom: 0.3rem;
+}
+.thumbnail__price {
+  font-size: 0.5625rem;
+  font-weight: normal;
+  color: #757575;
+}
+
 /*# sourceMappingURL=main.css.map */
