--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,9 @@
 
 @import './base/site-base';
 
+@import "./animations/loader";
+@import "./animations/cardEffect";
+
 @import './components/navBar';
 @import './components/logo';
 @import './components/photographersThumbnail';
