--- a/sass/layouts/_photographerPage-layout.scss
+++ b/sass/layouts/_photographerPage-layout.scss
@@ -1,14 +1,61 @@
+// Photographer Banner 
+.photographer-banner {
+    background-color: #FAFAFA;
+    height: 300px;
+    margin: 0 100px;
+    padding: 3.5rem 3.125rem 2.625rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 00.3125rem;
+
+    &__headline {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        order: 1;
+    }
+
+    &__name {
+        font-size: $name-font-size;
+        line-height: 1.5;
+        color: $orange;
+    }
+
+    &__location {
+        font-size: $location-font-size;
+        line-height: 1.5;
+        color: $primary-color;
+    }
+
+    &__tagline {
+        font-size: $tagline-font-size;
+        color: $grey;
+    }
+
+    &__picture {
+        order: 3;
+
+        @include mediumDesktop {
+            order: 2;
+        }
+
+        @include largeMobileLandscape {
+            order: -1;
+            margin-bottom: 1rem;
+        }
+    }
+}
+
+// Contact button
+
+// Contact Form
 #contact_modal {
     display: none;
 }
 
-.photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
-}
-
-.contact_button {
+.button-contact {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -23,7 +70,7 @@
 
 .modal {
     border-radius: 5px;
-    background-color: $orange-light;
+    background-color: $white;
     width: 50%;
     display: flex;
     flex-direction: column;
