--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,8 @@
 @import './components/navBar';
 @import './components/logo';
 @import './components/photographersThumbnail';
-@import './components/photographersProfil';
 @import './components/button';
-@import './components/DropDownMenu';
+@import './components/selectMenu';
 @import './components/mediaThumbnail';
 @import './components/cardInfo';
 @import './components/lightBox';
