--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -27,11 +27,11 @@ $default-font-size: 2.25rem;
 $contact-button-fs: 1.25rem;
 $contact-button-fs-mobile: 1.0625rem;
 
-$drop-menu-font-size: 1.125rem;
-$drop-menu-font-size-mobile: 0.9375rem;
+$select-menu-font-size: 1.125rem;
+$select-menu-font-size-mobile: 0.9375rem;
 
-$drop-menu-font-size: 1.125rem;
-$drop-menu-font-size-tablette: 0.9375rem;
+$select-menu-font-size: 1.125rem;
+$select-menu-font-size-tablette: 0.9375rem;
 
 $header-font-size: 1.7rem;
 $header-font-size-tablette: 1.3rem;
@@ -40,7 +40,7 @@ $name-font-size: 4rem;
 $name-font-size-mobile: 2.3rem;
 
 $location-font-size: 1.5rem;
-$location-font-size: 1.3125rem;
+$location-font-size-mobile: 1.3125rem;
 
 $tagline-font-size: 1.125rem;
 $tagline-font-size-mobile: 0.9375rem;
@@ -55,12 +55,12 @@ $line-height: 1.5;
 $white: #FFF;
 $black: #000;
 $grey: #525252;
-$lightGrey: #FAFAFA;
+$lightGrey: #fafafa;
 $mediumGrey: #757575;
 
-$primary-color: #901C1C;
-$orange-light: #DB8876;
-$orange: #D3573C;
+$primary-color: #901c1c;
+$orange-light: #db8876;
+$orange: #d3573c;
 
 /* Responsive variables */
 
