--- a/public/css/main.css
+++ b/public/css/main.css
@@ -410,17 +410,21 @@ a:hover h2, a:focus h2 {
 }
 
 a,
-button {
+button,
+select {
   transition: color 0.3s;
   transition: background-color 0.3s;
 }
 a:hover, a:focus,
 button:hover,
-button:focus {
+button:focus,
+select:hover,
+select:focus {
   color: #000;
 }
 a:focus-visible,
-button:focus-visible {
+button:focus-visible,
+select:focus-visible {
   outline: thin dotted;
 }
 
@@ -430,6 +434,7 @@ select {
   color: #FFF;
   border: none;
   border-radius: 5px;
+  background-color: #901c1c;
   cursor: pointer;
 }
 button:hover, button:focus,
@@ -497,16 +502,20 @@ li {
   flex-direction: row;
 }
 .select-menu__label {
-  margin-bottom: 1rem;
   margin-right: 1rem;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  color: #000;
 }
-.select-menu__option {
+
+.selected-option {
   width: 10.625rem;
-  line-height: 1.5;
+  height: 4.3125rem;
   position: relative;
-  height: 10.625rem;
+  line-height: 1.5;
 }
-.select-menu__items {
+.selected-option__items {
   display: inline-flex;
   width: 100%;
   -webkit-user-select: none;
@@ -517,14 +526,19 @@ li {
   align-items: center;
   justify-content: space-between;
   background-color: #901c1c;
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   color: #FFF;
-  padding: 1.5rem 1.125rem 1.4375rem 1.25rem;
+  padding: 1.4375rem 1.125rem 1.4375rem 1.25rem;
 }
-.select-menu__arrow {
+.selected-option__trigger {
+  border-radius: 0.5tem;
+}
+.selected-option__arrow {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-weight: 900;
+  font-family: "FontAwesome 6 Free";
 }
 
 /* HOMEPAGE BODY */
@@ -668,71 +682,6 @@ li {
     order: -1;
     margin-bottom: 1rem;
   }
-}
-
-#contact_modal {
-  display: none;
-}
-
-.button-contact {
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  padding: 11px;
-  width: 170px;
-  height: 70px;
-  border: none;
-  background-color: #901C1C;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.modal {
-  border-radius: 5px;
-  background-color: #FFF;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 35px;
-  margin: auto;
-}
-.modalheader {
-  justify-content: space-between;
-  width: 100%;
-}
-.modalheaderh2 {
-  font-size: 64px;
-  font-weight: normal;
-  text-align: center;
-}
-.modalheaderimg {
-  cursor: pointer;
-}
-
-form {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: flex-start;
-}
-formlabel {
-  color: #312E2E;
-  font-size: 36px;
-}
-formdiv {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: self-start;
-  margin-bottom: 26px;
-}
-forminput {
-  width: 100%;
-  height: 68px;
-  border: none;
-  border-radius: 5px;
 }
 
 .photographer_section {
