Add condition to sort out video and picture in photographer.html

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -56,6 +56,7 @@ $white: #FFF;
 $black: #000;
 $grey: #525252;
 $lightGrey: #fafafa;
+$mousegrey: #c4c4c4;
 $mediumGrey: #757575;
 
 $primary-color: #901c1c;
