--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./animations/loader";
 @import "./animations/cardEffect";
 
+@import './components/screenReadingOnly';
 @import './components/logo';
 @import './components/photographersThumbnail';
 @import './components/button';
