Add js banner and media deck photographer page

--- a/sass/components/_photographerBanner.scss
+++ b/sass/components/_photographerBanner.scss
@@ -67,6 +67,7 @@
     &__tagline {
         font-size: $tagline-font-size;
         color: $grey;
+        line-height: 1.5;
         @include tablette {
             font-size: $tagline-font-size-mobile;
         }
