--- a/public/css/main.css
+++ b/public/css/main.css
@@ -559,6 +559,7 @@ li {
 .photographer-banner__tagline {
   font-size: 1.125rem;
   color: #525252;
+  line-height: 1.5;
 }
 @media screen and (max-width: 992px) {
   .photographer-banner__tagline {
