--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 @import './components/button';
 @import './components/selectMenu';
 @import './components/cardInsert';
-@import './components/mediaCards';
+@import './components/mediaCard';
 @import './components/lightBox';
 @import './components/contactForm';
 
@@ -22,4 +22,3 @@
 @import './layouts/photographerPage-layout';
 
 @import './pages/homePage';
-@import './pages/photographerPage';
