--- a/public/css/main.css
+++ b/public/css/main.css
@@ -392,10 +392,16 @@ h2 {
   margin-bottom: 8px;
 }
 
+h3 {
+  color: #901c1c;
+  font-weight: normal;
+}
+
 p {
   font-weight: normal;
   text-align: center;
   color: #000;
+  margin-top: 1.5rem;
 }
 
 a {
@@ -440,11 +446,15 @@ select {
 button:hover, button:focus,
 select:hover,
 select:focus {
-  background-color: #db8876;
+  background-color: transparent;
 }
 
 li {
   list-style-type: none;
+}
+
+span {
+  font-weight: normal;
 }
 
 .user-picture {
@@ -538,7 +548,6 @@ li {
 }
 .photographer-banner__name {
   font-size: 4rem;
-  line-height: 1.5;
   color: #d3573c;
 }
 @media screen and (max-width: 992px) {
@@ -548,7 +557,6 @@ li {
 }
 .photographer-banner__location {
   font-size: 1.5rem;
-  line-height: 1.5;
   color: #901c1c;
 }
 @media screen and (max-width: 992px) {
@@ -559,7 +567,6 @@ li {
 .photographer-banner__tagline {
   font-size: 1.125rem;
   color: #525252;
-  line-height: 1.5;
 }
 @media screen and (max-width: 992px) {
   .photographer-banner__tagline {
@@ -613,7 +620,16 @@ li {
 .like-button__icon {
   font-weight: 900;
   font-size: 1.5rem;
-  margin-left: 0.4rem;
+  margin: 0.4rem 0.4rem 0.4rem 0.6rem;
+  border: none;
+  background: transparent;
+  color: #901c1c;
+  transform: scale(1);
+  transition: transform 0.3s;
+}
+.like-button__icon:hover {
+  transform: scale(1.5);
+  cursor: pointer;
 }
 
 .select-menu {
@@ -671,7 +687,7 @@ li {
 .card-insert {
   display: flex;
   width: 24rem;
-  height: 4rem;
+  padding: 1.8rem;
   align-items: center;
   border-top-right-radius: 0.3rem;
   border-top-left-radius: 0.3rem;
@@ -680,41 +696,81 @@ li {
   position: fixed;
   right: 36px;
   bottom: 0;
+  font-size: 1.5rem;
+  font-weight: 800;
+  justify-content: space-around;
+}
+.card-insert__counter {
+  display: flex;
+  align-items: center;
+}
+.card-insert p {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #000;
+}
+@media screen and (max-width: 1160px) {
+  .card-insert p {
+    font-size: 1.3125rem;
+  }
+}
+.card-insert__total-likes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card-insert__icon {
+  margin-left: 0.5rem;
+}
+@media screen and (max-width: 1160px) {
+  .card-insert {
+    font-size: 1.315rem;
+  }
 }
 
 .media-cards {
   width: 100%;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
-.media-cards__lightbox-link {
+.media-cards img {
   width: 100%;
-  height: 20rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0.5rem;
+  height: 18.75rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 0.32rem;
   background-color: #c4c4c4;
 }
-
-.media-cards-details {
+.media-cards video {
+  width: 100%;
+  height: 18.75rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 0.32rem;
+  background-color: #c4c4c4;
+}
+.media-cards__Lightbox-link {
+  width: 100%;
+  height: 18.75rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.32rem;
+  background-color: #c4c4c4;
+}
+.media-cards__footer {
+  width: 100%;
+  margin-top: 0.625rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  margin-top: 0.6rem;
+  font-size: 1.5rem;
 }
-@media screen and (max-width: 1160px) {
-  .media-cards-details {
-    font-size: 1.4rem;
-  }
-}
-.media-cards-details__title {
-  max-width: 12rem;
-  color: #901c1c;
+.media-cards__title {
+  max-width: 16rem;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -817,11 +873,15 @@ li {
   }
 }
 
+#photographer-gallery {
+  margin: 70px 100px;
+}
+
 .photographer-gallery {
   display: grid;
   margin: 3.6rem 4.5rem 0;
   grid-template-columns: repeat(3, 1fr);
-  gap: 4.5rem 6rem;
+  gap: 4.44rem 5.94rem;
   overflow: hidden;
 }
 @media screen and (max-width: 872px) {
