--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -35,6 +35,17 @@
     &__icon {
         font-weight: 900;
         font-size: 1.5rem;
-        margin-left: 0.4rem;
+        margin: 0.4rem 0.4rem 0.4rem 0.6rem;
+        border:none;
+        background: transparent;
+        color:$primary-color;
+        transform: scale(1);
+        transition: transform 0.3s;
+    
+        &:hover{
+            transform: scale(1.5);
+            cursor:pointer;
+        }
     }
 }
+
