--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 // Site buttons in photographer.html
-
 .button {
+    transition: color 0.6s;
+    transition: background-color 0.6s;
     width: 170px;
     height: 70px;
     padding: 11px;
@@ -11,6 +12,14 @@
     background-color: $primary-color;
     border-radius: 5px;
     cursor: pointer;
+    &:focus-visible {
+        outline: thin dotted;
+    }
+    &:hover,
+    &:focus { 
+        color: $black;
+        background-color: $orange-light;
+    }
 }
 
 .contact-button {
@@ -20,12 +29,19 @@
 // Media cards' like button
 
 .like-button {
+    transition: color 0.3s;
+    transition: background-color 0.3s;
     display: flex;
     justify-content: center;
     align-items: center;
     color: $primary-color;
     background-color: transparent;
     transition: outline .3s,color .3s;
+    font-weight: bold;
+    color: $white;
+    border: none;
+    border-radius: 5px; 
+    cursor: pointer;
 
     &__number-of-likes {
         font-size: 1.5rem;
@@ -44,6 +60,7 @@
     
         &:hover{
             transform: scale(1.5);
+            color: $primary-color;
             cursor:pointer;
         }
     }
