--- a/sass/components/_mediaCard.scss
+++ b/sass/components/_mediaCard.scss
@@ -24,7 +24,7 @@
         background-color: #c4c4c4;
     }
 
-    &__Lightbox-link {
+    &__lightbox-link {
         width: 100%;
         height: 18.75rem;
         justify-content: center;
