--- a/sass/components/_selectMenu.scss
+++ b/sass/components/_selectMenu.scss
@@ -25,8 +25,15 @@
     line-height: 1.5;
 
     &__items {
+        transition: color 0.6s;
+        transition: background-color 0.6s;
         display: inline-flex;
         width: 100%;
+        border: none;
+        font-weight: bold;
+        border-radius: 5px; 
+        background-color: $primary-color;
+        cursor: pointer;
         -webkit-user-select: none;
            -moz-user-select: none;
             -ms-user-select: none;
@@ -44,7 +51,11 @@
 
         }
 
-        &:hover:focus {
+        &:focus-visible {
+            outline: thin dotted;
+        }
+
+        &:hover, :focus {
             color: $black;
             background-color: $orange-light;
         }
